USTlord/Errors.txt
In file included from Board.h:12,
                 from Board.cpp:6:
Player.h:45:37: error: 'Board' does not name a type; did you mean 'Card'?
       virtual CardsGroup play(const Board& b);//use cin or hint (with loops) to Play cards according to current pattern, clear_cards, and reset data members
                                     ^~~~~
                                     Card
Board.cpp: In member function 'void Board::start_game()':
Board.cpp:109:34: error: no matching function for call to 'Player::play(Board&)'
         players[turn]->play(*this);
                                  ^
In file included from Board.h:12,
                 from Board.cpp:6:
Player.h:45:26: note: candidate: 'virtual CardsGroup Player::play(const int&)'
       virtual CardsGroup play(const Board& b);//use cin or hint (with loops) to Play cards according to current pattern, clear_cards, and reset data members
                          ^~~~
Player.h:45:26: note:   no known conversion for argument 1 from 'Board' to 'const int&'
In file included from Player.h:12,
                 from main.cpp:9:
Board.h:19:12: error: 'Player' was not declared in this scope
     vector<Player*> players;
            ^~~~~~
Board.h:19:19: error: template argument 1 is invalid
     vector<Player*> players;
                   ^
Board.h:19:19: error: template argument 2 is invalid
main.cpp: In function 'int main()':
main.cpp:21:12: error: 'make_choice' was not declared in this scope
     }while(make_choice("\nStart another game? (Y=yes/N=no) :"));
            ^~~~~~~~~~~
In file included from Player.h:12,
                 from Player.cpp:1:
Board.h:19:12: error: 'Player' was not declared in this scope
     vector<Player*> players;
            ^~~~~~
Board.h:19:19: error: template argument 1 is invalid
     vector<Player*> players;
                   ^
Board.h:19:19: error: template argument 2 is invalid